--- a/AcarePharmacy/presentation/disease/widget/DiseaseCollectionViewCell.xib
+++ b/AcarePharmacy/presentation/disease/widget/DiseaseCollectionViewCell.xib
@@ -14,24 +14,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="diseaseCell" id="uqo-47-z1x" customClass="DiseaseCollectionViewCell" customModule="AcarePharmacy" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="646" height="417"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="397"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                <rect key="frame" x="0.0" y="0.0" width="646" height="417"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="397"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZhC-SJ-cby">
-                        <rect key="frame" x="0.0" y="0.0" width="646" height="417"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="397"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5g4-8l-Nr3">
-                                <rect key="frame" x="173" y="0.0" width="300" height="300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="bjb-xL-NHf"/>
-                                    <constraint firstAttribute="width" secondItem="5g4-8l-Nr3" secondAttribute="height" multiplier="1:1" id="tvd-jm-ep1"/>
+                                    <constraint firstAttribute="height" constant="300" id="f9R-wu-zFy"/>
+                                    <constraint firstAttribute="width" secondItem="5g4-8l-Nr3" secondAttribute="height" multiplier="1:1" id="nEA-Tw-jBz"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wY-1B-rWd">
-                                <rect key="frame" x="0.0" y="300" width="646" height="117"/>
+                                <rect key="frame" x="0.0" y="300" width="300" height="97"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -39,31 +39,33 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="6wY-1B-rWd" secondAttribute="bottom" id="4AZ-Be-chu"/>
-                            <constraint firstItem="5g4-8l-Nr3" firstAttribute="top" secondItem="ZhC-SJ-cby" secondAttribute="top" id="7gT-eE-Oau"/>
-                            <constraint firstItem="6wY-1B-rWd" firstAttribute="leading" secondItem="ZhC-SJ-cby" secondAttribute="leading" id="9N3-do-72z"/>
-                            <constraint firstItem="5g4-8l-Nr3" firstAttribute="centerX" secondItem="ZhC-SJ-cby" secondAttribute="centerX" id="F4U-fq-U01"/>
-                            <constraint firstAttribute="width" constant="646" id="Z2o-yU-ApX"/>
-                            <constraint firstItem="6wY-1B-rWd" firstAttribute="top" secondItem="5g4-8l-Nr3" secondAttribute="bottom" id="qXQ-fC-3Ks"/>
-                            <constraint firstAttribute="trailing" secondItem="6wY-1B-rWd" secondAttribute="trailing" id="z2I-8k-VCg"/>
+                            <constraint firstItem="6wY-1B-rWd" firstAttribute="leading" secondItem="5g4-8l-Nr3" secondAttribute="leading" id="5kO-ac-g9T"/>
+                            <constraint firstAttribute="trailing" secondItem="5g4-8l-Nr3" secondAttribute="trailing" id="AHM-8A-wSq"/>
+                            <constraint firstItem="5g4-8l-Nr3" firstAttribute="top" secondItem="ZhC-SJ-cby" secondAttribute="top" id="F59-3h-L1o"/>
+                            <constraint firstItem="6wY-1B-rWd" firstAttribute="top" secondItem="5g4-8l-Nr3" secondAttribute="bottom" id="Ich-Qm-Los"/>
+                            <constraint firstAttribute="width" constant="300" id="ZUn-wF-l24"/>
+                            <constraint firstAttribute="bottom" secondItem="6wY-1B-rWd" secondAttribute="bottom" id="c7p-3O-fWH"/>
+                            <constraint firstItem="5g4-8l-Nr3" firstAttribute="leading" secondItem="ZhC-SJ-cby" secondAttribute="leading" id="ir2-BF-hc7"/>
+                            <constraint firstItem="6wY-1B-rWd" firstAttribute="trailing" secondItem="5g4-8l-Nr3" secondAttribute="trailing" id="mqO-Hk-RJ9"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="ZhC-SJ-cby" firstAttribute="leading" secondItem="uqo-47-z1x" secondAttribute="leading" id="0Yy-SC-OAv"/>
-                <constraint firstAttribute="trailing" secondItem="ZhC-SJ-cby" secondAttribute="trailing" id="Npy-Ge-qco"/>
-                <constraint firstItem="ZhC-SJ-cby" firstAttribute="top" secondItem="uqo-47-z1x" secondAttribute="top" id="g1J-Hm-wTr"/>
-                <constraint firstAttribute="bottom" secondItem="ZhC-SJ-cby" secondAttribute="bottom" id="i1b-V1-dSn"/>
+                <constraint firstAttribute="bottom" secondItem="ZhC-SJ-cby" secondAttribute="bottom" id="WNg-z6-QK4"/>
+                <constraint firstItem="ZhC-SJ-cby" firstAttribute="leading" secondItem="uqo-47-z1x" secondAttribute="leading" id="XBY-xR-j7K"/>
+                <constraint firstAttribute="trailing" secondItem="ZhC-SJ-cby" secondAttribute="trailing" id="hab-l1-qMg"/>
+                <constraint firstItem="ZhC-SJ-cby" firstAttribute="top" secondItem="uqo-47-z1x" secondAttribute="top" id="rjA-Ln-RTp"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="O3l-mN-Sxe"/>
-            <size key="customSize" width="553" height="428"/>
+            <size key="customSize" width="207" height="408"/>
             <connections>
+                <outlet property="heightContraint" destination="f9R-wu-zFy" id="GLv-bM-QiF"/>
                 <outlet property="imageDisease" destination="5g4-8l-Nr3" id="k0a-jM-XvA"/>
                 <outlet property="lblDiseaseName" destination="6wY-1B-rWd" id="YoQ-Bf-cBy"/>
-                <outlet property="widthContraint" destination="Z2o-yU-ApX" id="ya2-Rq-5jY"/>
+                <outlet property="widthContraint" destination="ZUn-wF-l24" id="2Dp-SE-yZk"/>
             </connections>
-            <point key="canvasLocation" x="-166" y="293.5"/>
+            <point key="canvasLocation" x="-339" y="283.5"/>
         </collectionViewCell>
     </objects>
 </document>
